micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-service-ci-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-k8s
  namespace: traefik
spec:
  #externalName: ci-k8s.bosh #bosh-dns alias (ci-k8s server AND agent)
  externalName: q-s0.agents.net-bosh-2.01-ci-k8s.bosh #bosh dns query to target healthy ci-k8s agent
  type: ExternalName
