micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-service-docker-cli.yaml
## creating service reference with an external fqdn, leveraging endpoint slides (fqdn is ok with ExternalName)
apiVersion: v1
kind: Service
metadata:
  name: docker-bosh-cli
  namespace: traefik
spec:
  externalName: q-s0.docker-cli.net-bosh-2.docker-bosh-cli.bosh #bosh-dns alias
  type: ExternalName
