micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-service-k3s-sandbox.yaml
## creating service reference with an external fqdn, leveraging endpoint slides (fqdn is ok with ExternalName)
apiVersion: v1
kind: Service
metadata:
  name: k3s-sandbox
  namespace: traefik
spec:
  externalName: 192.168.99.15 #k3s-sandbox internal vip
  type: ExternalName
