micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-service-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-router
  namespace: traefik
spec:
  externalName: q-s0.ops-routing-router.net-bosh-2.ops-routing.bosh
  type: ExternalName
