micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-route-ci.yaml
#grouped staic route
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: routingmap-ci
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  tls:
    passthrough: true
  routes:
  - match: HostSNI(`gitlab-gitlab-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ci-k8s
      namespace: traefik
      kind: Service
      port: 30725 #TODO change to 443
  - match: HostSNI(`minio-gitlab-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
      - name: ci-k8s
        namespace: traefik
        kind: Service
        port: 30725 #TODO change to 443
  - match: HostSNI(`concourse-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ci-k8s
      namespace: traefik
      kind: Service
      port: 30725 #TODO change to 443
  - match: HostSNI(`minio-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ci-k8s
      namespace: traefik
      kind: Service
      port: 443
  - match: HostSNI(`openldap-k8s.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: ci-k8s
      namespace: traefik
      kind: Service
      port: 443
