micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-route-default.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: routingmap-ops-router
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  tls:
    passthrough: true
  routes:
  - match: HostSNI(`*`)
    kind: Rule
    priority: 1
    services:
    - name: ops-router
      namespace: traefik
      kind: Service
      port: 443
