micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-route-gitops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: routingmapgitops
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  tls:
    passthrough: true
  routes:
  - match: HostSNI(`rancher-micro.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: gitops-management
      namespace: traefik
      kind: Service
      port: 443
  - match: HostSNI(`stratos.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: gitops-management
      namespace: traefik
      kind: Service
      port: 443
  - match: HostSNI(`stratos-cf.((/secrets/cloudfoundry_ops_domain))`)
    kind: Rule
    priority: 10
    services:
    - name: gitops-management
      namespace: traefik
      kind: Service
      port: 443
