micro-depls/00-core-connectivity-k8s/k8s-config/manifests/10-traefik-static-routes/zz-external-route-ldap.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: routingmapldap
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - ldap
  routes:
  - match: HostSNI(`*`)
    kind: Rule
    priority: 10
    services:
    - name: ci-k8s
      namespace: traefik
      kind: Service
      port: 389
